<resources>
    <string name="app_name">RSR Revalidatieservice</string>
    <string name="ring_now">Bel RSR nu</string>
    <string name="activity_maps">RSR Pechhulp</string>
    <string name="activity_info">Over RSR</string>
    <string name="your_location">Uw locatie:</string>
    <string name="remember_location">Onthoud deze locatie voor het telefoongesprek</string>
    <string name="cancel">Annuleren</string>
    <string name="ring">Bel nu</string>
    <string name="costs">Belkosten</string>belkosten
    <string name="notification_costs">Voor dit nummer betaalt u uw gebruikelijke belkosten.</string>
    <string name="RSR_info">Met de hulp van RSR blijft u mobiel. RSR is dé leverancuer van hulpmiddelen
        in de regio Noordoost-Nederland. Gedegen kennis en jarenlange ervaring zit in ons DNA verweven
        en leidt tot het beste advies. \n\nWilt u meer weten over onze producten en diensten, kijk dan op
        <a href="www.rsr.nl">www.rsr.nl</a> of bezoek onze showrooms in Silvolde en Nieuwleusen. We zijn iedere werkdag geopend
        van 8.00 tot 17.00 uur. Hier kunt u diverse hulpmiddenlen uitproberen en rustig bekijken wat
        goed bij uw situatie aansluit. Samen met u zoeken we naar hulpmiddelen dat bij u past.
        RSR maakt mensen mobiel.</string>
    <string name="phone_number">0900&#8211;7788990</string>
    <string name="call_title">Neem contact op med RSR Nederland</string>
    <string name="call_price">9,4 cent per gesprek plus 2,8 cent per minuut, plus gebruikelijke belkosten.</string>
</resources>
