<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linPop"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:gravity="start|center_vertical"
        android:text="@string/cancel"
        android:padding="10dp"
        android:textAllCaps="false"
        android:textColor="#FFFFFF" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="60dp"
        android:paddingRight="60dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:background="#CCCAD300">

        <TextView
            android:id="@+id/txtview1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/costs"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtview2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/notification_costs"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/btnRingConfirm"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:drawableLeft="@drawable/main_btn_phone"
            android:textSize="20dp"
            android:gravity="center"
            android:paddingStart="70dp"
            android:text="@string/ring"
            android:textAllCaps="false"
            android:textColor="#FFFFFF" />
    </LinearLayout>
</LinearLayout>